# vector-quantize-pytorch

./: .gitignore  Changelog.md  README.md  autoencoder_fvq.py  flake.nix  pyproject.toml  ruff.toml  setup.py
.github/workflows/: build.yml  nix-build.yml  test.yml
examples/: __init__.py  autoencoder.py  autoencoder_fsp.py  autoencoder_fsq.py  autoencoder_fsq_qinco.py  autoencoder_fvq.py  autoencoder_gq.py  autoencoder_hq.py  autoencoder_lfq.py  autoencoder_lfq_masked.py  autoencoder_optvq.py  autoencoder_sim_vq.py  data.py  residual_fsq_qinco.py  toy_example_optvq.ipynb
tests/: test_beam.py  test_examples_readme.py  test_finite_scalar_quantization.py  test_fsp.py  test_latent_quantization.py  test_lfq.py  test_manual_ema.py  test_readme.py
vector_quantize_pytorch/: __init__.py  binary_mapper.py  evo_vq.py  finite_scalar_perturbation.py  finite_scalar_quantization.py  gaussian_quant.py  hierarchical_vq.py  latent_quantization.py  lookup_free_quantization.py  random_projection_quantizer.py  residual_fsq.py  residual_lfq.py  residual_sim_vq.py  residual_vq.py  sim_vq.py  test_latent_quantization.py  utils.py  vector_quantize_pytorch.py
vector_quantizer_pytorch/: __init__.py  vector_quantizer_pytorch.py
