[project]
name = "vector-quantize-pytorch"
version = "1.22.10"
description = "Vector Quantization - Pytorch"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.9"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'pytorch',
    'quantization'
  ]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.6',
  ]

dependencies = [
    "torch>=2.0",
    "einops>=0.8.0",
    "einx>=0.3.0",
]

[project.urls]
Homepage = "https://pypi.org/project/vector-quantize-pytorch/"
Repository = "https://github.com/lucidrains/vector-quantizer-pytorch"

[project.optional-dependencies]
examples = ["tqdm", "torchvision"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.2",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["vector_quantize_pytorch"]
